--- a/especialidades/cocina_vlc.html
+++ b/especialidades/cocina_vlc.html
@@ -158,12 +158,10 @@
         <section class="section-secondary">
             <article class="video-container">
                 <div class="wrapper-video-section">
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/661741321?h=0cccefe0b7&dnt=1&app_id=122963" title="COCINA CASTELLANO 27122021.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/661741143?h=8fa3a17c7c&dnt=1&app_id=122963" title="PARTICIPANTES COCINA CASTELLANO.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/661741072?h=2cebdbdfd0&dnt=1&app_id=122963" title="EXPERTO COCINA CASTELLANO.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_q05ajagu" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_pxb82ggp" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_ipvgssfa" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    
                 </div>
             </article>
         </section>
