--- a/especialidades/ebanisteria_vlc.html
+++ b/especialidades/ebanisteria_vlc.html
@@ -148,12 +148,10 @@
         <section class="section-secondary">
             <article class="video-container">
                 <div class="wrapper-video-section">
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659565972?h=d693f8c908&dnt=1&app_id=122963" title="FP CV Skills Ebanister&iacute;a 2021 Sub Es v3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659574406?h=132d8a17f6&dnt=1&app_id=122963" title="Resumen 5 minutos FP CV Skills ebanister&iacute;a 2021 Sub Es v2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659571950?h=1701e6a898&dnt=1&app_id=122963" title="Resumen 2 minutos FP CV Skills ebanister&iacute;a 2021 Sub Es v2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_190nd281" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_imbyp1yw" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_xgdduezy" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    
                 </div>
             </article>
         </section>
