--- a/especialidades/refrigeracion_aire-acondicionado_vlc.html
+++ b/especialidades/refrigeracion_aire-acondicionado_vlc.html
@@ -152,12 +152,10 @@
         <section class="section-secondary">
             <article class="video-container">
                 <div class="wrapper-video-section">
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659720767?h=a6eac99ffa&dnt=1&app_id=122963" title="Refrigeraci&oacute;n Cast.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659752354?h=6dd5e526fc&dnt=1&app_id=122963" title="Skill Refrigeraci&oacute;n resumen alumnos cs.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659762048?h=55767cb0ba&dnt=1&app_id=122963" title="Refrigeraci&oacute;n Experto Cs.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_9y86l391" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_2xhbvk8y" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_5ku96v4p" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    
                 </div>
             </article>
         </section>
