--- a/especialidades/disenyo_mecanico_vlc.html
+++ b/especialidades/disenyo_mecanico_vlc.html
@@ -181,12 +181,10 @@
         <section class="section-secondary">
             <article class="video-container">
                 <div class="wrapper-video-section">
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659486570?h=8efe376598&dnt=1&app_id=122963" title="FP CV Skills Dise&ntilde;o Mecanico 2021 Sub Es v3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659573835?h=559a584709&dnt=1&app_id=122963" title="Resumen 5 minutos FP CV Skills Dise&ntilde;o Mecanico 2021 Sub Es v3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659571467?h=adcbf0788a&dnt=1&app_id=122963" title="Resumen 2 minutos FP CV Skills Dise&ntilde;o Mecanico 2021 Sub Es v3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_2jy9qc12" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_iyn3a2wk" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_6wmoj79h" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    
                 </div>
             </article>
         </section>
