--- a/especialidades/tecnologia_automovil_vlc.html
+++ b/especialidades/tecnologia_automovil_vlc.html
@@ -135,12 +135,10 @@
         <section class="section-secondary">
             <article class="video-container">
                 <div class="wrapper-video-section">
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659356369?h=8d47560ef2&dnt=1&app_id=122963" title="Tecnolog&iacute;a del Autom&oacute;vil CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659341929?h=124f10b533&dnt=1&app_id=122963" title="Tecnolog&iacute;a del automovil Alumnos CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <iframe class="video-skills" src="https://player.vimeo.com/video/659327343?h=a95cf1d7b3&dnt=1&app_id=122963" title="Tecnolog&iacute;a del automovil Experto CAS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_1a3swasx" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_cr272aag" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    <iframe id="kaltura_player_1675341023" src="https://videos.gva.es/p/118/sp/11800/embedIframeJs/uiconf_id/23448187/partner_id/118?iframeembed=true&playerId=kaltura_player_1675341023&entry_id=0_2sjw9gr4" width="640" height="360" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" frameborder="0"></iframe>
+                    
                 </div>
             </article>
         </section>
